syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message VirtualGuest {
    enum State {
        Using = 0;
        Deleted = 1;
        Unavailable = 2;
    }

    optional string hostname = 2;
    optional int32 cpu = 3;
    optional int32 memory_mb = 4;
    optional int32 public_vlan = 5;
    optional int32 private_vlan = 6;
    optional State state = 7;
    optional int32 cid = 1;

    optional string deployment_name = 8;
    optional string ip =10;

    optional int64 created_at = 11;
    optional int64 updated_at = 12;
}

